--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-/*  your css code here. If applicable */
+#selector{
+	background: #eee;
+	color: #00f ;
+	font-family: arial;
+	font-size: 20px;
+	
+}
